--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>front-ned</title>
+    <title>bootstrap</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top ">
